# Svd2cppObjects

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  requirements.txt  run-tests.sh  run.sh
inc/: Bitfield.hpp  Peripheral.hpp  PeripheralFactory.hpp  Property.hpp  Register.hpp  Types.hpp
src/: Svd2cppObjects.py  asdf.json
src/templates/: bitfields_struct.j2  factory.j2  peripheral.j2  peripheral_register.j2  peripheral_register_bitfield.j2  register_struct.j2  test.j2  test_app.j2
tests/: BitfieldTests.cpp  PeripheralFactory.hpp  PeripheralFactoryTests.cpp  PeripheralTests.cpp  PropertyTests.cpp  RegisterTests.cpp  main.cpp  utilities.hpp
toolchains/: i386-linux-gnu.cmake
